--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,108 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* BotCollection.css */
+.bot-collection-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bot-card {
+  flex-basis: calc(35% - 20px); /* 20% width minus 20px for margin */
+  margin-bottom: 20px;
+}
+
+.bot-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border: 1px solid gray;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px;
+  background-color: #e0d5d3;
+}
+
+.bot-card img {
+  width: 150px;
+  height: 150px;
+  margin-bottom: 10px;
+  border: 1px solid gray;
+  border-radius: 50%;
+}
+
+.bot-card h3 {
+  font-size: 1.2rem;
+}
+
+.bot-card h7 {
+  font-size: 12px;
+}
+
+.bot-card p {
+  margin: 1px 0;
+  font-size: 0.9rem;
+  text-align: center;
+}
+
+.bot-card button {
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #4CAF50;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+/* YourBotArmy.css */
+.bot-army-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.bot-card, .army-bot-card {
+  flex-basis: calc(25% - 20px); /* 25% width minus 20px for margin */
+  margin-bottom: 20px;
+}
+
+.bot-card, .army-bot-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 250px;
+  height: 350px;
+  border: 1px solid gray;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.army-bot-card img {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 10px;
+  border-radius: 50%;
+}
+
+.army-bot-card h3 {
+  margin: 0;
+  font-size: 1.2rem;
+}
+
+.army-bot-card p {
+  margin: 5px 0;
+  font-size: 0.9rem;
+  text-align: center;
+}
+
+.army-bot-card button {
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #FF5733;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
 }
