--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@ body {
   background-color: rgb(163, 206, 6);
 }
 
-/* BotCollection.css */
+h1, h2{
+  text-align: center;
+}
+
 .bot-collection-container {
   display: flex;
   flex-wrap: wrap;
@@ -58,7 +61,6 @@ body {
   
   }
   
-  /* YourBotArmy.css */
   .bot-army-container {
   display: flex;
   flex-wrap: wrap;
@@ -89,7 +91,7 @@ body {
   font-size: 1.2rem;
   }
 
-  .army-card h7 {
+  .army-card h6 {
     font-size: 11px;
     font-weight: bold;
     word-wrap: break-word;
